# ClapPluginCppTemplate

./: CMakeLists.txt
cmake/: Dependencies.cmake
